# pave-agent-adk

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/memory/: MEMORY.md  feedback_query_patterns.md  feedback_response_style.md  feedback_simplicity.md  project_node_mapping.md  project_skill_review.md  project_todo.md  project_usecases.md
agents/pave/: agent.py
common/: settings.py
common/db/: mock_db.py  oracle_client.py
common/engines/: analyze.py  interpret.py  query_data.py
common/rag/: retriever.py
docs/: edd-methodology.md  phase2-3-roadmap.md
docs/usecases/: use_case_1_direct_data_access.md  use_case_2_node_benchmarking.md
pave_agent/: agent.py  domain_loader.py  litellm_patch.py  llm.py  prompts.py  settings.py
pave_agent/cache/: data_cache.py
pave_agent/db/: mock_db.py  oracle_client.py  vector_store.py
pave_agent/engines/: analyze.py  interpret.py  query_data.py
pave_agent/rag/: indexer.py  retriever.py
pave_agent/sandbox/: executor.py
pave_agent/skills/: SKILL.md
pave_agent/tools/: __init__.py  analyze.py  deterministic_analysis.py  interpret.py  query_data.py
pave_lib/: settings.py
pave_lib/db/: oracle_client.py  vector_store.py
pave_lib/rag/: indexer.py  retriever.py
pave_lib/tools/: __init__.py  analyze.py  interpret.py  query_data.py
root_agent/: agent.py
root_agent/pave_agent/: agent.py
tests/: README.md  conftest.py  test_analyze.py  test_interpret.py  test_query_data.py
tests/agent/: test_agent_eval.py  test_config.json
tests/tool/: test_analyze_fast_paths.py  test_query_ppa.py  (+1 more)
(+23 files in other folders)
